# spek-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: CONTRIBUTING.md  release-notes.md
.github/assets/workflows/: build.yml
.github/workflows/: build.yml  release.yml
packaging/: PKGBUILD  nfpm.yaml  spek-rs.desktop
packaging/wix/: License.rtf  main.wxs
src/: app.rs  ffmpeg_setup.rs  legend.rs  main.rs  palettes.rs  settings.rs  utils.rs
src/ui/: ffmpeg_setup.rs  mod.rs  settings_panel.rs  window_about.rs  window_help.rs  window_keybindings.rs  window_legend_settings.rs
