[package]
name = "spek-rs"
version = "0.1.0"
edition = "2024"
authors = ["Patryk Kurdziel <patryk.kurdziel@protonmail.com>"]
description = "Spek alternative written in Rust."
repository = "https://github.com/patryk-ku/spek-rs"
license = "MIT"

[dependencies]
eframe = { version = "0.32.3", features = ["default", "wgpu"]}
egui_extras = { version = "0.32.3", features = ["default", "image"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.8", features = ["png"] }
rfd = "0.14.1"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
