[package]
name = "spek-rs"
version = "0.1.0"
edition = "2024"
authors = ["Patryk Kurdziel <patryk.kurdziel@protonmail.com>"]
description = "Spek alternative written in Rust."
repository = "https://github.com/patryk-ku/spek-rs"
license = "MIT"

[dependencies]
eframe = { version = "0.33.0", features = ["default", "wgpu"]}
egui_extras = { version = "0.33.0", features = ["default", "image"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.0", features = ["png"] }
rfd = "0.15.4"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
imageproc = { version = "0.25.0" }
ab_glyph = { version = "0.2.3" }

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
