[package]
name = "spek-rs"
version = "0.1.0"
edition = "2021"
authors = ["Patryk Kurdziel <patryk.kurdziel@protonmail.com>"]
description = "Acoustic spectrum analyser. Spek alternative written in Rust."
repository = "https://github.com/patryk-ku/spek-rs"
license = "MIT"

[dependencies]
eframe = { version = "0.33.0", features = ["default", "wgpu"]}
egui_extras = { version = "0.33.0", features = ["default", "image"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.0", features = ["png"] }
rfd = "0.15.4"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
imageproc = { version = "0.25.0" }
ab_glyph = { version = "0.2.3" }
font-kit = "0.14.3"
ffmpeg-sidecar = "2.2.0"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "ld-linux-x86-64.so*",
    "libc.so*",
    "libm.so*",
    "libgcc_s.so*",
    "libz.so*",
    "libexpat.so*",
    "libbrotlidec.so*",
    "libbrotlicommon.so*",
]

[package.metadata.bundle]
name = "Spek-rs"
identifier = "com.patrykku.spekrs"
icon = ["assets/icon.png"]
copyright = "Copyright (c) Patryk Kurdziel 2025. All rights reserved."
category = "Utility"
